include/gpiod.h

/**
 * @file gpiod.h
 */

/**
 * @mainpage libgpiod public API
 *
 * This is the complete documentation of the public API made available to
 * users of libgpiod.
 *
 * <p>The API is logically split into several parts such as: GPIO chip & line
 * operators, GPIO events handling etc.
 *
 * <p>General note on error handling: all routines exported by libgpiod  set
 * errno to one of the error values defined in errno.h upon failure. The way
 * of notifying the caller that an error occurred varies between functions,
 * but in general a function that returns an int, returns -1 on error, while
 * a function returning a pointer bails out on error condition by returning
 * a NULL pointer.
 */

struct gpiod_chip;
struct gpiod_line;
struct gpiod_line_bulk;
/**
 * @}
 *
 * @defgroup chips GPIO chip operations
 * @{
 *
 * Functions and data structures dealing with GPIO chips.
 */

/**
 * @brief Check if the file pointed to by path is a GPIO chip character device.
 * @param path Path to check.
 * @return True if the file exists and is a GPIO chip character device or a
 *         symbolic link to it.
 */
bool gpiod_is_gpiochip_device(const char *path);
/**
 * @brief Open a gpiochip by path.
 * @param path Path to the gpiochip device file.
 * @return GPIO chip handle or NULL if an error occurred.
 */
struct gpiod_chip *gpiod_chip_open(const char *path);
/**
 * @brief Increase the refcount on this GPIO object.
 * @param chip The GPIO chip object.
 * @return Passed reference to the GPIO chip.
 */
struct gpiod_chip *gpiod_chip_ref(struct gpiod_chip *chip);
/**
 * @brief Decrease the refcount on this GPIO object. If the refcount reaches 0,
 *        close the chip device and free all associated resources.
 * @param chip The GPIO chip object.
 */
void gpiod_chip_unref(struct gpiod_chip *chip);
/**
 * @brief Get the GPIO chip name as represented in the kernel.
 * @param chip The GPIO chip object.
 * @return Pointer to a human-readable string containing the chip name.
 */
const char *gpiod_chip_get_name(struct gpiod_chip *chip);
/**
 * @brief Get the GPIO chip label as represented in the kernel.
 * @param chip The GPIO chip object.
 * @return Pointer to a human-readable string containing the chip label.
 */
const char *gpiod_chip_get_label(struct gpiod_chip *chip);
/**
 * @brief Get the number of GPIO lines exposed by this chip.
 * @param chip The GPIO chip object.
 * @return Number of GPIO lines.
 */
unsigned int gpiod_chip_get_num_lines(struct gpiod_chip *chip);
/**
 * @brief Get the handle to the GPIO line at given offset.
 * @param chip The GPIO chip object.
 * @param offset The offset of the GPIO line.
 * @return Pointer to the GPIO line handle or NULL if an error occured.
 */
struct gpiod_line *
gpiod_chip_get_line(struct gpiod_chip *chip, unsigned int offset);
/**
 * @brief Retrieve a set of lines and store them in a line bulk object.
 * @param chip The GPIO chip object.
 * @param offsets Array of offsets of lines to retrieve.
 * @param num_offsets Number of lines to retrieve.
 * @return New line bulk object or NULL on error.
 */
struct gpiod_line_bulk *
gpiod_chip_get_lines(struct gpiod_chip *chip, unsigned int *offsets,
		     unsigned int num_offsets);
/**
 * @brief Retrieve all lines exposed by a chip and store them in a bulk object.
 * @param chip The GPIO chip object.
 * @return New line bulk object or NULL on error.
 */
struct gpiod_line_bulk *
gpiod_chip_get_all_lines(struct gpiod_chip *chip);
/**
 * @brief Map a GPIO line's name to its offset within the chip.
 * @param chip The GPIO chip object.
 * @param name Name of the GPIO line to map.
 * @return Offset of the line within the chip or -1 if a line with given name
 *         is not exposed by the chip.
 */
int gpiod_chip_find_line(struct gpiod_chip *chip, const char *name);
/**
 * @}
 *
 * @defgroup lines GPIO line operations
 * @{
 *
 * Functions and data structures dealing with GPIO lines.
 *
 * @defgroup line_bulk Operating on multiple lines
 * @{
 *
 * Convenience data structures and helper functions for storing and operating
 * on multiple lines at once.
 */

/**
 * @brief Allocate and initialize a new line bulk object.
 * @param max_lines Maximum number of lines this object can hold.
 * @return New line bulk object or NULL on error.
 */
struct gpiod_line_bulk *gpiod_line_bulk_new(unsigned int max_lines);
/**
 * @brief Reset a bulk object. Remove all lines and set size to 0.
 * @param bulk Bulk object to reset.
 */
void gpiod_line_bulk_reset(struct gpiod_line_bulk *bulk);
/**
 * @brief Release all resources allocated for this bulk object.
 * @param bulk Bulk object to free.
 */
void gpiod_line_bulk_free(struct gpiod_line_bulk *bulk);
/**
 * @brief Add a single line to a GPIO bulk object.
 * @param bulk Line bulk object.
 * @param line Line to add.
 * @return 0 on success, -1 on error.
 * @note The line is added at the next free bulk index.
 *
 * The function can fail if this bulk already holds its maximum amount of
 * lines or if the added line is associated with a different chip than all
 * the other lines already held by this object.
 */
int gpiod_line_bulk_add_line(struct gpiod_line_bulk *bulk,
			     struct gpiod_line *line);
/**
 * @brief Retrieve the line handle from a line bulk object at given index.
 * @param bulk Line bulk object.
 * @param index Index of the line to retrieve.
 * @return Line handle at given index or NULL if index is greater or equal to
 *         the number of lines this bulk can hold.
 */
struct gpiod_line *
gpiod_line_bulk_get_line(struct gpiod_line_bulk *bulk, unsigned int index);
/**
 * @brief Retrieve the number of GPIO lines held by this line bulk object.
 * @param bulk Line bulk object.
 * @return Number of lines held by this line bulk.
 */
unsigned int gpiod_line_bulk_num_lines(struct gpiod_line_bulk *bulk);
/**
 * @brief Values returned by the callback passed to
 *        ::gpiod_line_bulk_foreach_line.
 */
enum {
	/**< Continue the loop. */
	GPIOD_LINE_BULK_CB_NEXT = 0,
	/**< Stop the loop. */
	GPIOD_LINE_BULK_CB_STOP,
};
/**
 * @brief Signature of the callback passed to ::gpiod_line_bulk_foreach_line.
 *
 * Takes the current line and additional user data as arguments.
 */
typedef int (*gpiod_line_bulk_foreach_cb)(struct gpiod_line *, void *);
/**
 * @brief Iterate over all lines held by this bulk object.
 * @param bulk Bulk object to iterate over.
 * @param func Callback to be called for each line.
 * @param data User data pointer that is passed to the callback.
 */
void gpiod_line_bulk_foreach_line(struct gpiod_line_bulk *bulk,
				  gpiod_line_bulk_foreach_cb func,
				  void *data);
/**
 * @}
 *
 * @defgroup line_info Line info
 * @{
 *
 * Definitions and functions for retrieving kernel information about both
 * requested and free lines.
 */

/**
 * @brief Possible direction settings.
 */
enum {
	GPIOD_LINE_DIRECTION_INPUT = 1,
	/**< Direction is input - we're reading the state of a GPIO line. */
	GPIOD_LINE_DIRECTION_OUTPUT,
	/**< Direction is output - we're driving the GPIO line. */
};
/**
 * @brief Possible drive settings.
 */
enum {
	GPIOD_LINE_DRIVE_PUSH_PULL = 1,
	/**< Drive setting is push-pull. */
	GPIOD_LINE_DRIVE_OPEN_DRAIN,
	/**< Line output is open-drain. */
	GPIOD_LINE_DRIVE_OPEN_SOURCE,
	/**< Line output is open-source. */
};
/**
 * @brief Possible internal bias settings.
 */
enum {
	GPIOD_LINE_BIAS_UNKNOWN = 1,
	/**< The internal bias state is unknown. */
	GPIOD_LINE_BIAS_DISABLED,
	/**< The internal bias is disabled. */
	GPIOD_LINE_BIAS_PULL_UP,
	/**< The internal pull-up bias is enabled. */
	GPIOD_LINE_BIAS_PULL_DOWN,
	/**< The internal pull-down bias is enabled. */
};
/**
 * @brief Read the GPIO line offset.
 * @param line GPIO line object.
 * @return Line offset.
 */
unsigned int gpiod_line_offset(struct gpiod_line *line);
/**
 * @brief Read the GPIO line name.
 * @param line GPIO line object.
 * @return Name of the GPIO line as it is represented in the kernel. This
 *         routine returns a pointer to a null-terminated string or NULL if
 *         the line is unnamed.
 */
const char *gpiod_line_name(struct gpiod_line *line);
/**
 * @brief Read the GPIO line consumer name.
 * @param line GPIO line object.
 * @return Name of the GPIO consumer name as it is represented in the
 *         kernel. This routine returns a pointer to a null-terminated string
 *         or NULL if the line is not used.
 */
const char *gpiod_line_consumer(struct gpiod_line *line);
/**
 * @brief Read the GPIO line direction setting.
 * @param line GPIO line object.
 * @return Returns GPIOD_LINE_DIRECTION_INPUT or GPIOD_LINE_DIRECTION_OUTPUT.
 */
int gpiod_line_direction(struct gpiod_line *line);
/**
 * @brief Check if the signal of this line is inverted.
 * @param line GPIO line object.
 * @return True if this line is "active-low", false otherwise.
 */
bool gpiod_line_is_active_low(struct gpiod_line *line);
/**
 * @brief Read the GPIO line bias setting.
 * @param line GPIO line object.
 * @return Returns GPIOD_LINE_BIAS_PULL_UP, GPIOD_LINE_BIAS_PULL_DOWN,
 *         GPIOD_LINE_BIAS_DISABLED or GPIOD_LINE_BIAS_UNKNOWN.
 */
int gpiod_line_bias(struct gpiod_line *line);
/**
 * @brief Read the GPIO line drive setting.
 * @param line GPIO line object.
 * @return Returns GPIOD_LINE_DRIVE_PUSH_PULL, GPIOD_LINE_DRIVE_OPEN_DRAIN or
 *         GPIOD_LINE_DRIVE_OPEN_SOURCE.
 */
int gpiod_line_drive(struct gpiod_line *line);