bindings/rust/libgpiod-sys/src/lib.rs

//! # libgpiod public API
//!
//! This is the complete documentation of the public API made available to
//! users of libgpiod.
//!
//! The API is logically split into several parts such as: GPIO chip & line
//! operators, GPIO events handling etc.
//!
//! ### General note on error handling
//! All routines exported by libgpiod set `errno` to one of the error values
//! defined in `errno.h` upon failure. The way of notifying the caller that an
//! error occurred varies between functions, but in general a function that
//! returns an int, returns `-1` on error, while a function returning a pointer
//! bails out on error condition by returning `NULL` pointer.
#![allow(dead_code)]

use libc::*;

// Re-export enums to be even more C like
pub use gpiod_line_bias::*;
pub use gpiod_line_bulk_cb::*;
pub use gpiod_line_direction::*;
pub use gpiod_line_drive::*;
pub use gpiod_line_event_type::*;
pub use gpiod_line_request_flag::*;
pub use gpiod_line_request_type::*;

/// Opaque type representing a GPIO chip.
#[repr(C)]
#[derive(Copy, Clone, Eq, PartialEq, Hash, Debug)]
pub struct gpiod_chip {
    _data: [u8; 0],
    _metadata: core::marker::PhantomData<(*mut u8, core::marker::PhantomPinned)>,
}

/// Opaque type representing a GPIO line handle.
#[repr(C)]
#[derive(Copy, Clone, Eq, PartialEq, Hash, Debug)]
pub struct gpiod_line {
    _data: [u8; 0],
    _metadata: core::marker::PhantomData<(*mut u8, core::marker::PhantomPinned)>,
}

/// Opaque type representing a line bulk object.
#[repr(C)]
#[derive(Copy, Clone, Eq, PartialEq, Hash, Debug)]
pub struct gpiod_line_bulk {
    _data: [u8; 0],
    _metadata: core::marker::PhantomData<(*mut u8, core::marker::PhantomPinned)>,
}

extern "C" {
    /// Check if the file pointed to by path is a GPIO chip character device.
    ///
    /// ## Arguments
    /// * `path` Path to check.
    ///
    /// ## Return
    /// True if the file exists and is a GPIO chip character device or a
    /// symbolic link to it.
    pub fn gpiod_is_gpiochip_device(path: *const c_char) -> bool;
}

extern "C" {
    /// Open a [`gpiod_chip`] by path.
    ///
    /// ## Arguments
    /// * `path` Path to the [`gpiod_chip`] device file.
    ///
    /// ## Return
    /// GPIO chip handle or `NULL` if an error occurred.
    pub fn gpiod_chip_open(path: *const c_char) -> *mut gpiod_chip;
}

extern "C" {
    /// Increase the refcount on this GPIO object.
    ///
    /// ## Arguments
    /// * `chip` The GPIO chip object.
    ///
    /// ## Return
    /// Passed reference to the GPIO chip.
    pub fn gpiod_chip_ref(chip: *mut gpiod_chip) -> *mut gpiod_chip;
}

extern "C" {
    /// Decrease the refcount on this GPIO object. If the refcount reaches `0`,
    /// close the chip device and free all associated resources.
    ///
    /// ## Arguments
    /// * `chip` The GPIO chip object.
    pub fn gpiod_chip_unref(chip: *mut gpiod_chip);
}

extern "C" {
    /// Get the GPIO chip name as represented in the kernel.
    ///
    /// ## Arguments
    /// * `chip` The GPIO chip object.
    ///
    /// ## Return
    /// Pointer to a human-readable string containing the chip name.
    pub fn gpiod_chip_get_name(chip: *mut gpiod_chip) -> *const c_char;
}

extern "C" {
    /// Get the GPIO chip label as represented in the kernel.
    ///
    /// ## Arguments
    /// * `chip` The GPIO chip object.
    ///
    /// ## Return
    /// Pointer to a human-readable string containing the chip label.
    pub fn gpiod_chip_get_label(chip: *mut gpiod_chip) -> *const c_char;
}

extern "C" {
    /// Get the number of GPIO lines exposed by this chip.
    ///
    /// ## Arguments
    /// * `chip` The GPIO chip object.
    ///
    /// ## Return
    /// Number of GPIO lines.
    pub fn gpiod_chip_get_num_lines(chip: *mut gpiod_chip) -> c_uint;
}

extern "C" {
    /// Get the handle to the GPIO line at given offset.
    ///
    /// ## Arguments
    /// * `chip` The GPIO chip object.
    /// * `offset` The offset of the GPIO line.
    ///
    /// ## Return
    /// Pointer to the GPIO line handle or `NULL` if an error occured.
    pub fn gpiod_chip_get_line(
        chip: *mut gpiod_chip,
        offset: c_uint,
    ) -> *mut gpiod_line;
}

extern "C" {
    /// Retrieve a set of lines and store them in a line bulk object.
    ///
    /// ## Arguments
    /// * `chip` The GPIO chip object.
    /// * `offsets` Array of offsets of lines to retrieve.
    /// * `num_offsets` Number of lines to retrieve.
    ///
    /// ## Return
    /// New line bulk object or `NULL` on error.
    pub fn gpiod_chip_get_lines(
        chip: *mut gpiod_chip,
        offsets: *mut c_uint,
        num_offsets: c_uint,
    ) -> *mut gpiod_line_bulk;
}

extern "C" {
    /// Retrieve all lines exposed by a chip and store them in a bulk object.
    ///
    /// ## Arguments
    /// * `chip` The GPIO chip object.
    ///
    /// ## Return
    /// New line bulk object or `NULL` on error.
    pub fn gpiod_chip_get_all_lines(chip: *mut gpiod_chip) -> *mut gpiod_line_bulk;
}

extern "C" {
    /// Map a GPIO line's name to its offset within the chip.
    ///
    /// ## Arguments
    /// * `chip` The GPIO chip object.
    /// * `name` Name of the GPIO line to map.
    ///
    /// ## Return
    /// Offset of the line within the chip or `-1` if a line with given name
    /// is not exposed by the chip.
    pub fn gpiod_chip_find_line(
        chip: *mut gpiod_chip,
        name: *const c_char,
    ) -> c_int;
}

extern "C" {
    /// Allocate and initialize a new line bulk object.
    ///
    /// ## Arguments
    /// * `max_lines` Maximum number of lines this object can hold.
    ///
    /// ## Return
    /// New line bulk object or `NULL` on error.
    pub fn gpiod_line_bulk_new(max_lines: c_uint) -> *mut gpiod_line_bulk;
}

extern "C" {
    /// Reset a bulk object. Remove all lines and set size to `0`.
    ///
    /// ## Arguments
    /// * `bulk` Bulk object to reset.
    pub fn gpiod_line_bulk_reset(bulk: *mut gpiod_line_bulk);
}

extern "C" {
    /// Release all resources allocated for this bulk object.
    ///
    /// ## Arguments
    /// * `bulk` Bulk object to free.
    pub fn gpiod_line_bulk_free(bulk: *mut gpiod_line_bulk);
}

extern "C" {
    /// Add a single line to a GPIO bulk object.
    ///
    /// ## Arguments
    /// * `bulk` Line bulk object.
    /// * `line` Line to add.
    ///
    /// ## Return
    /// `0` on success, `-1` on error.
    ///
    /// ## Note
    /// The line is added at the next free bulk index.
    ///
    /// The function can fail if this bulk already holds its maximum amount of
    /// lines or if the added line is associated with a different chip than all
    /// the other lines already held by this object.
    pub fn gpiod_line_bulk_add_line(
        bulk: *mut gpiod_line_bulk,
        line: *mut gpiod_line,
    ) -> c_int;
}

extern "C" {
    /// Retrieve the line handle from a line bulk object at given index.
    ///
    /// ## Arguments
    /// * `bulk` Line bulk object.
    /// * `index` Index of the line to retrieve.
    ///
    /// ## Return
    /// Line handle at given index or `NULL` if index is greater or equal to
    /// the number of lines this bulk can hold.
    pub fn gpiod_line_bulk_get_line(
        bulk: *mut gpiod_line_bulk,
        index: c_uint,
    ) -> *mut gpiod_line;
}

extern "C" {
    /// Retrieve the number of GPIO lines held by this line bulk object.
    ///
    /// ## Arguments
    /// * `bulk` Line bulk object.
    ///
    /// ## Return
    /// Number of lines held by this line bulk.
    pub fn gpiod_line_bulk_num_lines(bulk: *mut gpiod_line_bulk) -> c_uint;
}

/// Values returned by the callback passed to [`gpiod_line_bulk_foreach_line()`].
#[allow(non_camel_case_types)]
pub enum gpiod_line_bulk_cb {
    /// Continue the loop.
    GPIOD_LINE_BULK_CB_NEXT = 0,
    /// Stop the loop.
    GPIOD_LINE_BULK_CB_STOP = 1,
}

/// Signature of the callback passed to [`gpiod_line_bulk_foreach_line()`].
///
/// ## Arguments
/// * `line` GPIO line object.
/// * `user_data` additional user data.
///
/// ## Return
/// Returns [`GPIOD_LINE_BULK_CB_NEXT`] or [`GPIOD_LINE_BULK_CB_STOP`]
#[allow(non_camel_case_types)]
pub type gpiod_line_bulk_foreach_cb = extern "C" fn(line: *mut gpiod_line, user_data: *mut c_void) -> c_int;

extern "C" {
    /// Iterate over all lines held by this bulk object.
    ///
    /// ## Arguments
    /// * `bulk` Bulk object to iterate over.
    /// * `func` Callback to be called for each line.
    /// * `data` User data pointer that is passed to the callback.
    pub fn gpiod_line_bulk_foreach_line(
        bulk: *mut gpiod_line_bulk,
        func: gpiod_line_bulk_foreach_cb,
        data: *mut c_void,
    );
}

/// Possible direction settings.
#[allow(non_camel_case_types)]
pub enum gpiod_line_direction {
    /// Direction is input - we're reading the state of a GPIO line.
    GPIOD_LINE_DIRECTION_INPUT = 1,
    /// Direction is output - we're driving the GPIO line.
    GPIOD_LINE_DIRECTION_OUTPUT = 2,
}

/// Possible drive settings.
#[allow(non_camel_case_types)]
pub enum gpiod_line_drive {
    /// Drive setting is push-pull
    GPIOD_LINE_DRIVE_PUSH_PULL = 1,
    /// Line output is open-drain.
    GPIOD_LINE_DRIVE_OPEN_DRAIN = 2,
    /// Line output is open-source.
    GPIOD_LINE_DRIVE_OPEN_SOURCE = 3,
}

/// Possible internal bias settings.
#[allow(non_camel_case_types)]
pub enum gpiod_line_bias {
    /// The internal bias state is unknown.
    GPIOD_LINE_BIAS_UNKNOWN = 1,
    /// The internal bias is disabled.
    GPIOD_LINE_BIAS_DISABLED = 2,
    /// The internal pull-up bias is enabled.
    GPIOD_LINE_BIAS_PULL_UP = 3,
    /// The internal pull-down bias is enabled.
    GPIOD_LINE_BIAS_PULL_DOWN = 4,
}

extern "C" {
    /// Read the GPIO line offset.
    ///
    /// ## Arguments
    /// * `line` GPIO line object.
    ///
    /// ## Return
    /// Line offset.
    pub fn gpiod_line_offset(line: *mut gpiod_line) -> c_uint;
}

extern "C" {
    /// Read the GPIO line name.
    ///
    /// ## Arguments
    /// * `line` GPIO line object.
    ///
    /// ## Return
    /// Name of the GPIO line as it is represented in the kernel. This
    /// routine returns a pointer to a null-terminated string or `NULL` if
    /// the line is unnamed.
    pub fn gpiod_line_name(line: *mut gpiod_line) -> *const c_char;
}

extern "C" {
    /// Read the GPIO line consumer name.
    ///
    /// ## Arguments
    /// * `line` GPIO line object.
    ///
    /// ## Return
    /// Name of the GPIO consumer name as it is represented in the
    /// kernel. This routine returns a pointer to a null-terminated string
    /// or `NULL` if the line is not used.
    pub fn gpiod_line_consumer(line: *mut gpiod_line) -> *const c_char;
}

extern "C" {
    /// Read the GPIO line direction setting.
    ///
    /// ## Arguments
    /// * `line` GPIO line object.
    ///
    /// ## Return
    /// Returns [`GPIOD_LINE_DIRECTION_INPUT`] or [`GPIOD_LINE_DIRECTION_OUTPUT`].
    pub fn gpiod_line_direction(line: *mut gpiod_line) -> c_int;
}

extern "C" {
    /// Check if the signal of this line is inverted.
    ///
    /// ## Arguments
    /// * `line` GPIO line object.
    ///
    /// ## Return
    /// True if this line is "active-low", false otherwise.
    pub fn gpiod_line_is_active_low(line: *mut gpiod_line) -> bool;
}

extern "C" {
    /// Read the GPIO line bias setting.
    ///
    /// ## Arguments
    /// * `line` GPIO line object.
    ///
    /// ## Return
    /// Returns [`GPIOD_LINE_BIAS_PULL_UP`], [`GPIOD_LINE_BIAS_PULL_DOWN`],
    /// [`GPIOD_LINE_BIAS_DISABLED`] or [`GPIOD_LINE_BIAS_UNKNOWN`].
    pub fn gpiod_line_bias(line: *mut gpiod_line) -> c_int;
}
